plugins {
    id 'java-library'
    id 'org.springframework.boot' version '3.4.5'
}
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


ext {
    querydslVersion = "5.1.0"
}
subprojects {

    group = 'org.codeNbug'
    version = '0.0.1-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    dependencies {
        api 'com.querydsl:querydsl-core'
        api 'com.querydsl:querydsl-jpa:5.0.0:jakarta'

        annotationProcessor("com.querydsl:querydsl-apt:5.0.0:jakarta") // querydsl JPAAnnotationProcessor 사용 지정
        annotationProcessor("jakarta.persistence:jakarta.persistence-api")
        // java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
        annotationProcessor("jakarta.annotation:jakarta.annotation-api")
        // java.lang.NoClassDefFoundError (javax.annotation.Generated) 발생 대응
        implementation "org.springframework.boot:spring-boot-starter-data-jpa"


        implementation 'org.springframework.boot:spring-boot-starter'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'

        compileOnly 'org.projectlombok:lombok'
        developmentOnly 'org.springframework.boot:spring-boot-devtools'
        runtimeOnly 'com.mysql:mysql-connector-j'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'
        
        // Test Dependencies
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.junit.jupiter:junit-jupiter-api'
        testImplementation 'org.junit.jupiter:junit-jupiter-params'
        testImplementation 'org.mockito:mockito-core'
        testImplementation 'org.mockito:mockito-junit-jupiter' // JUnit 5와 Mockito 통합
        testImplementation 'org.assertj:assertj-core'
        testImplementation 'com.h2database:h2'             // 테스트용 인메모리 데이터베이스
        testImplementation 'org.testcontainers:junit-jupiter'
        testImplementation 'org.testcontainers:mysql'      // MySQL 통합 테스트용
        testImplementation 'io.rest-assured:rest-assured'  // REST API 테스트용
        
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    }
    // APT로 생성된 소스를 컴파일에 포함
    tasks.withType(JavaCompile) {
        options.annotationProcessorGeneratedSourcesDirectory = file("$buildDir/generated/querydsl")
    }
    sourceSets.main.java.srcDir("$buildDir/generated/querydsl")
    clean {
        delete file("$buildDir/generated/querydsl")
    }
}

tasks.named('bootJar') {
    enabled = false
}

tasks.named('jar') {
    enabled = true
}

tasks.named('test') {
    useJUnitPlatform()
}
